# rpi_RustLCD

./: Cargo.toml  README.md
cpp/dma_spi/: CMakeLists.txt  README.md
cpp/dma_spi/include/: bcm_dma.hpp  demo_pattern.hpp  dma_backend.hpp  dma_mailbox.hpp  mmio_map.hpp  rpi_mailbox_ioctl.hpp  spi0_regs.hpp  spi_transport.hpp
cpp/dma_spi/src/: demo_pattern.cpp  dma_backend.cpp  dma_mailbox.cpp  main.cpp  mmio_map.cpp  spi_transport.cpp
docs/: ILI9486_init_review.md
src/: app.rs  delta.rs  main.rs  sysinfo.rs
src/bus/: spi.rs
src/framebuffer/: mod.rs
src/gpio/: mod.rs
src/panel/: ili9486.rs  mod.rs
src/render/: font5x7.rs  mod.rs  patterns.rs  primitives.rs
